<resources>
    <string name="app_name">CoinsApp</string>
    <string name="assets">Assets</string>
    <string name="rates">Rates</string>
    <string name="exchanges">Exchanges</string>
    <string name="markets">Markets</string>
    <string name="service_unavailable_message">Service unavailable. Please try again!</string>
    <string name="no_connection_message">No connection. Please try again!</string>
    <string name="something_went_wrong">Something went wrong. Please try again!</string>
    <string name="try_again">Try again</string>
    <string name="no_results_to_show">No results to show</string>
    <string name="please_check_spelling">Please check spelling or try a different word</string>
    <string name="rank">Rank:</string>
    <string name="search_assets">Search assets</string>
    <string name="available_supply_for_trading">Available supply for trading:</string>
    <string name="total_quantity_of_asset_issued">Total quantity of asset issued:</string>
    <string name="supply_x_price">Supply x price:</string>
    <string name="quantity_of_trading_volume_represented_in_usd_over_the_last_24_hours">Quantity of trading volume represented in USD over the last 24 hours:</string>
    <string name="price_usd">Price (USD):</string>
    <string name="direction_and_value_change_in_the_last_24_hours">Direction and value change in the last 24 hours:</string>
    <string name="volume_weighted_average_price">Volume Weighted Average Price in the last 24 hours:</string>
    <string name="history">History</string>
    <string name="price_in_usd">Price in USD:</string>
    <string name="time">Time:</string>
    <string name="asset_markets">Asset Markets</string>
    <string name="search_asset_markets">Search Asset Markets</string>
    <string name="base_id">Base ID:</string>
    <string name="quote_id">Quote ID:</string>
    <string name="rate_in_usd">Rate in USD:</string>
    <string name="search_rates">Search rates</string>
    <string name="currency_symbol">Currency symbol:</string>
    <string name="type">Type:</string>
    <string name="id">ID:</string>
    <string name="search_exchanges">Search exchanges</string>
    <string name="percent_of_total_volume">Percent of total volume:</string>
    <string name="daily_volume_in_usd">Daily volume in USD:</string>
    <string name="trading_pairs_offered_by_exchange">Trading pairs offered by exchange:</string>
    <string name="website_to_exchange">Website to exchange:</string>
    <string name="search_markets">Search markets</string>
</resources>