<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/progress_fullscreen"
        android:id="@+id/rate_info_progress_layout"
        android:visibility="gone" />

    <include layout="@layout/fail_fullscreen"
        android:id="@+id/rate_info_fail_layout"
        android:visibility="gone" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/rate_info_swipe_to_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView style="@style/scroll_view">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/rate_info_symbol"
                    tools:text="BTC"
                    style="@style/big_text_view" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/rate_info_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="24sp"
                    style="@style/TextAppearance.AppCompat.Body1"
                    tools:text="Bitcoin" />

                <com.google.android.material.divider.MaterialDivider
                    style="@style/divider" />

                <com.google.android.material.textview.MaterialTextView
                    android:textStyle="bold"
                    style="@style/small_text_view"
                    android:text="@string/currency_symbol" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/rate_info_currency_symbol"
                    style="@style/small_text_view"
                    tools:text="₿" />

                <com.google.android.material.divider.MaterialDivider
                    style="@style/divider" />

                <com.google.android.material.textview.MaterialTextView
                    android:textStyle="bold"
                    style="@style/small_text_view"
                    android:text="@string/type" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/rate_info_type"
                    style="@style/small_text_view"
                    tools:text="crypto" />

                <com.google.android.material.divider.MaterialDivider
                    style="@style/divider" />

                <com.google.android.material.textview.MaterialTextView
                    android:textStyle="bold"
                    style="@style/small_text_view"
                    android:text="@string/rate_in_usd" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/rate_info_rate_usd"
                    style="@style/small_text_view"
                    tools:text="6444.3132749056076909" />

                <com.google.android.material.divider.MaterialDivider
                    style="@style/divider" />
            </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>